Modules updated to version 1.0
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@73 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/DLHelpers/pom.xml
+++ b/DLHelpers/pom.xml
@@ -1,12 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>zk-dl</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>zk-dl</artifactId>
+        <groupId>cz.datalite.zk-dl</groupId>
+        <version>1.0</version>
+    </parent>
+
     <groupId>cz.datalite.zk-dl</groupId>
-    <version>0.9-SNAPSHOT</version>
-  </parent>
-  <groupId>cz.datalite.zk-dl</groupId>
-  <artifactId>DLHelpers</artifactId>
-  <version>0.9-SNAPSHOT</version>
-  <name>DLHelpers</name>
+    <artifactId>DLHelpers</artifactId>
+    <version>1.0</version>
+    <name>DLHelpers</name>
+    <description>Helpers - everyone needs to have some package like this, please feel free to explore it's internals and use anything you want.</description>
+    
 </project>
