--- a/ZKComponents/pom.xml
+++ b/ZKComponents/pom.xml
@@ -1,43 +1,34 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>zk-dl</artifactId>
-		<groupId>cz.datalite.zk-dl</groupId>
-		<version>0.9-SNAPSHOT</version>
-	</parent>
-	<groupId>cz.datalite.zk-dl</groupId>
-	<artifactId>ZKComponents</artifactId>
-	<version>0.9-SNAPSHOT</version>
-	<name>ZKComponents</name>
-	<dependencies>
-		<dependency>
-			<groupId>org.zkoss.zk</groupId>
-			<artifactId>zk</artifactId>
-			<version>${org.zkframework.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.zkoss.zk</groupId>
-			<artifactId>zul</artifactId>
-			<version>${org.zkframework.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.zkoss.zk</groupId>
-			<artifactId>zhtml</artifactId>
-			<version>${org.zkframework.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.zkoss.zk</groupId>
-			<artifactId>zkplus</artifactId>
-			<version>${org.zkframework.version}</version>
-		</dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>zk-dl</artifactId>
+        <groupId>cz.datalite.zk-dl</groupId>
+        <version>1.0</version>
+    </parent>
 
-		<dependency>
-			<groupId>cz.datalite.zk-dl</groupId>
-			<artifactId>DLHelpers</artifactId>
-			<version>${project.version}</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-	</dependencies>
+    <groupId>cz.datalite.zk-dl</groupId>
+    <artifactId>ZKComponents</artifactId>
+    <version>1.0</version>
+    <name>ZKComponents</name>
+    <description>Other imporvements of basic ZK components - please check the documentation for each overriden component.</description>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.zkoss.zk</groupId>
+            <artifactId>zul</artifactId>
+            <version>${org.zkframework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.zkoss.zk</groupId>
+            <artifactId>zkplus</artifactId>
+            <version>${org.zkframework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cz.datalite.zk-dl</groupId>
+            <artifactId>DLHelpers</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
