--- a/SpringService/pom.xml
+++ b/SpringService/pom.xml
@@ -1,83 +1,83 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>zk-dl</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>zk-dl</artifactId>
+        <groupId>cz.datalite.zk-dl</groupId>
+        <version>1.0</version>
+    </parent>
+
     <groupId>cz.datalite.zk-dl</groupId>
-    <version>0.9-SNAPSHOT</version>
-  </parent>
-  <groupId>cz.datalite.zk-dl</groupId>
-  <artifactId>SpringService</artifactId>
-  <version>0.9-SNAPSHOT</version>
-  <name>SpringService</name>
+    <artifactId>SpringService</artifactId>
+    <version>1.0</version>
+    <name>SpringService</name>
+    <description>Generic Spring service, which talks to Generic Hibernate DAO. Use for classical 3-layered architecture ZK - Spring - Hibernate.</description>
 
-<dependencies>  
+    <dependencies>
+        <!--
+            Core utilities used by other modules.
+            Define this if you use Spring Utility APIs (org.springframework.core.*/org.springframework.util.*)
+        -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
 
-<!--
-    Core utilities used by other modules.
-    Define this if you use Spring Utility APIs (org.springframework.core.*/org.springframework.util.*)
--->
-<dependency>
-  <groupId>org.springframework</groupId>
-  <artifactId>spring-core</artifactId>
-  <version>${org.springframework.version}</version>
-</dependency>
+        <!--
+            Bean Factory and JavaBeans utilities (depends on spring-core)
+            Define this if you use Spring Bean APIs (org.springframework.beans.*)
+        -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
 
-<!--
-    Bean Factory and JavaBeans utilities (depends on spring-core)
-    Define this if you use Spring Bean APIs (org.springframework.beans.*)
--->
-<dependency>
-  <groupId>org.springframework</groupId>
-  <artifactId>spring-beans</artifactId>
-  <version>${org.springframework.version}</version>
-</dependency>
+        <!--
+            Aspect Oriented Programming (AOP) Framework (depends on core, beans)
+            Define this if you use Spring AOP APIs (org.springframework.aop.*)
+        -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
 
-<!--
-    Aspect Oriented Programming (AOP) Framework (depends on core, beans)
-    Define this if you use Spring AOP APIs (org.springframework.aop.*)
--->
-<dependency>
-  <groupId>org.springframework</groupId>
-  <artifactId>spring-aop</artifactId>
-  <version>${org.springframework.version}</version>
-</dependency>
+        <!--
+            Application Context (depends on core, expression, aop, beans)
+            This is the central artifact for Spring's Dependency Injection Container and is generally always defined
+        -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
 
-<!--
-    Application Context (depends on core, expression, aop, beans)
-    This is the central artifact for Spring's Dependency Injection Container and is generally always defined
--->
-<dependency>
-  <groupId>org.springframework</groupId>
-  <artifactId>spring-context</artifactId>
-  <version>${org.springframework.version}</version>
-</dependency>
-
-<!--
-    Object-to-Relation-Mapping (ORM) integration with Hibernate, JPA, and iBatis.
-    (depends on core, beans, context, transaction)
-    Define this if you need ORM (org.springframework.orm.*)
--->
-<dependency>
-  <groupId>org.springframework</groupId>
-  <artifactId>spring-orm</artifactId>
-  <version>${org.springframework.version}</version>
-</dependency>
+        <!--
+            Object-to-Relation-Mapping (ORM) integration with Hibernate, JPA, and iBatis.
+            (depends on core, beans, context, transaction)
+            Define this if you need ORM (org.springframework.orm.*)
+        -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
 
 
 
-<dependency>
-	<groupId>cz.datalite.zk-dl</groupId>
-	<artifactId>DLHelpers</artifactId>
-	<version>${project.version}</version>
-	<type>jar</type>
-	<scope>compile</scope>
-</dependency>
-<dependency>
-	<groupId>cz.datalite.zk-dl</groupId>
-	<artifactId>HibernateDAO</artifactId>
-	<version>0.9-SNAPSHOT</version>
-	<type>jar</type>
-	<scope>compile</scope>
-</dependency>
-</dependencies>
+        <dependency>
+            <groupId>cz.datalite.zk-dl</groupId>
+            <artifactId>DLHelpers</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cz.datalite.zk-dl</groupId>
+            <artifactId>HibernateDAO</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+    </dependencies>
 </project>
