--- a/ZKDLComponentsHibernateExt/pom.xml
+++ b/ZKDLComponentsHibernateExt/pom.xml
@@ -1,35 +1,35 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>zk-dl</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>zk-dl</artifactId>
+        <groupId>cz.datalite.zk-dl</groupId>
+        <version>1.0</version>
+    </parent>
+
     <groupId>cz.datalite.zk-dl</groupId>
-    <version>0.9-SNAPSHOT</version>
-  </parent>
-  <groupId>cz.datalite.zk-dl</groupId>
-  <artifactId>ZKDLComponentsHibernateExt</artifactId>
-  <version>0.9-SNAPSHOT</version>
-  <name>ZKDLComponentsHibernateExt</name>
-  <dependencies>
-  	<dependency>
-  		<groupId>cz.datalite.zk-dl</groupId>
-  		<artifactId>DLHelpers</artifactId>
-  		<version>0.9-SNAPSHOT</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>cz.datalite.zk-dl</groupId>
-  		<artifactId>HibernateDAO</artifactId>
-  		<version>0.9-SNAPSHOT</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>cz.datalite.zk-dl</groupId>
-  		<artifactId>ZKDLComponents</artifactId>
-  		<version>0.9-SNAPSHOT</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  </dependencies>
+    <artifactId>ZKDLComponentsHibernateExt</artifactId>
+    <version>1.0</version>
+    <name>ZKDLComponentsHibernateExt</name>
+    <description>The actual interface between ZKComponents and HibernateDAO. It contains mainly DLListboxCriteriaController.</description>
+    
+    <dependencies>
+        <dependency>
+            <groupId>cz.datalite.zk-dl</groupId>
+            <artifactId>DLHelpers</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cz.datalite.zk-dl</groupId>
+            <artifactId>HibernateDAO</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cz.datalite.zk-dl</groupId>
+            <artifactId>ZKDLComponents</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
