--- a/ZKStatistics/pom.xml
+++ b/ZKStatistics/pom.xml
@@ -1,40 +1,40 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>zk-dl</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>zk-dl</artifactId>
+        <groupId>cz.datalite.zk-dl</groupId>
+        <version>1.0</version>
+    </parent>
+
     <groupId>cz.datalite.zk-dl</groupId>
-    <version>0.9</version>
-  </parent>
-  <groupId>cz.datalite.zk-dl</groupId>
-  <artifactId>ZKStatistics</artifactId>
-  <version>0.9-SNAPSHOT</version>
-  <name>ZKStatistics</name>
+    <artifactId>ZKStatistics</artifactId>
+    <version>1.0</version>
+    <name>ZKStatistics</name>
+    <description>Detail monitoring of your session (Timing, Events, SQL Query, Service methods).</description>
   
-  <dependencies>
-		<dependency>
-			<groupId>org.zkoss.zk</groupId>
-			<artifactId>zk</artifactId>
-			<version>${org.zkframework.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.zkoss.zk</groupId>
-			<artifactId>zul</artifactId>
-			<version>${org.zkframework.version}</version>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.zkoss.zk</groupId>
+            <artifactId>zk</artifactId>
+            <version>${org.zkframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.zkoss.zk</groupId>
+            <artifactId>zul</artifactId>
+            <version>${org.zkframework.version}</version>
+        </dependency>
 		
-    <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-entitymanager</artifactId>
-        <version>${org.hibernateframework.version}</version>
-    </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${org.hibernateframework.version}</version>
+        </dependency>
 	
-    <dependency>
-    	<groupId>aopalliance</groupId>
-    	<artifactId>aopalliance</artifactId>
-    	<version>1.0</version>
-    	<type>jar</type>
-    	<scope>compile</scope>
-    </dependency>
-  </dependencies>
+        <dependency>
+            <groupId>aopalliance</groupId>
+            <artifactId>aopalliance</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 	
 </project>
