- Update to version 1.1 - Tutorial application ZKDLTutorial - Minor fixes - FilterComponent and FilterCompiler
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@84 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/ZKDLDemo/pom.xml
+++ b/ZKDLDemo/pom.xml
@@ -20,8 +20,6 @@
     </properties>
 
     <dependencies>
-
-
         <!-- Basic spring dependency. -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -224,7 +222,18 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin> 
+            </plugin>
+
+            <!-- Run the demo on Liferay -->
+            <plugin>
+                <groupId>com.liferay.maven.plugins</groupId>
+                <artifactId>liferay-maven-plugin</artifactId>
+                <version>6.0.5</version>
+                <configuration>
+                    <liferayVersion>6.0.5</liferayVersion>
+                    <autoDeployDir>c:\liferay\bundles\deploy</autoDeployDir>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
