--- a/Selenium/pom.xml
+++ b/Selenium/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <artifactId>zk-dl</artifactId>
         <groupId>cz.datalite.zk-dl</groupId>
-        <version>1.0</version>
+        <version>1.1</version>
     </parent>
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>Selenium</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
     <name>Selenium</name>
     <description>Integration tests with Selenium 2.0 (WebDriver) - PageObjects pattern (still in beta)</description>
 
@@ -23,6 +23,13 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium</artifactId>
             <version>2.0b1</version>
+            <exclusions>
+                <exclusion>
+                    <!-- Problem with surfire when TestNG is on classpath -->
+                    <groupId>org.testng</groupId>
+                    <artifactId>testng</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
