--- a/ZKDLTutorial/src/main/resources/log4j.properties
+++ b/ZKDLTutorial/src/main/resources/log4j.properties
@@ -8,7 +8,7 @@ log4j.logger.cz.datalite.zk.components=DEBUG
 ### Datalite ###
 log4j.logger.cz.datalite=DEBUG
 
-### Databaze ###
+### Database ###
 log4j.logger.org.hibernate.SQL=DEBUG, ZKHibernate
 ### log JDBC bind parameters - vypisuje ale pak vsechno mozne ###
 #log4j.logger.org.hibernate.type=TRACE, ZKHibernate
@@ -17,25 +17,12 @@ log4j.logger.org.hibernate.SQL=DEBUG, ZKHibernate
 #log4j.logger.org.hibernate.cfg=INFO, CONSOLE
 
 #### Spring
-log4j.logger.org.springframework=WARN, ZKHibernate
-
-# Logserver for BeanMill plugins in NetBeans
-#log4j.appender.LogServer=org.apache.log4j.net.SocketAppender
-#log4j.appender.LogServer.Port=4445
-#log4j.appender.LogServer.RemoteHost=localhost
-
+log4j.logger.org.springframework=INFO, ZKHibernate
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{dd.MM.yyyy HH:mm:ss} %-5p (%c:%L) %3x - %m%n
-
-# R - file appender - v zakladu je vypnuty
-log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=/opt/jboss/server/zkspring/log/ResitelskeKapacity.log
-log4j.appender.R.MaxBackupIndex=30
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%d{dd.MM.yyyy HH:mm:ss} %-5p (%c:%L) %3x - %m%n
 
 log4j.appender.ZKHibernate=cz.datalite.zkspring.monitor.ZKLog4jAppender
 
