--- a/ZKLiferay/pom.xml
+++ b/ZKLiferay/pom.xml
@@ -9,15 +9,31 @@
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>ZKLiferay</artifactId>
-    <version>1.1</version>
+    <version>1.1-SNAPSHOT</version>
     <name>ZKLiferay</name>
 
     <dependencies>
         <dependency>
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>ZKDLComponents</artifactId>
-            <version>${project.version}</version>
+            <version>1.1</version>
+            <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>cz.datalite.zk-dl</groupId>
+            <artifactId>HibernateDAO</artifactId>
+            <version>1.1</version>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>cz.datalite.zk-dl</groupId>
+            <artifactId>SpringService</artifactId>
+            <version>1.1</version>
+            <optional>true</optional>
+        </dependency>
+
 
         <dependency>
             <groupId>com.liferay.portal</groupId>
@@ -89,6 +105,13 @@
                     <groupId>log4j</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>3.0.5.RELEASE</version>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
