--- a/ZKLiferay/pom.xml
+++ b/ZKLiferay/pom.xml
@@ -114,6 +114,13 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc-portlet</artifactId>
+            <version>3.0.4.RELEASE</version>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <properties>
