- version changed to 1.1-SNAPSHOT - refactored ZkEvent processing. Instead of long parsing methods is now used design pattern decorator. - added new annotation @ZkException (no documentation yet)
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@98 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/ZKComposer/pom.xml
+++ b/ZKComposer/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -8,9 +9,15 @@
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>ZKComposer</artifactId>
-    <version>1.1</version>
+    <version>1.1-SNAPSHOT</version>
     <name>ZK Composer</name>
     <description>DLComposer and support packages - MVC composer for ZK.</description>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <netbeans.hint.license>LGPL</netbeans.hint.license>
+        <org.zkoss.zk.version>5.0.7</org.zkoss.zk.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -37,7 +44,7 @@
         <dependency>
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>DLHelpers</artifactId>
-            <version>${project.version}</version>
+            <version>1.1</version>
         </dependency>
     </dependencies>
 </project>
