--- a/ZKComposer/pom.xml
+++ b/ZKComposer/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>ZKComposer</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.2</version>
     <name>ZK Composer</name>
     <description>DLComposer and support packages - MVC composer for ZK.</description>
 
