- version changed to 1.2-SNAPSHOT - disabled autowiring mechanism bound to ZK Controllers. It is slow and unuseful because there are use @ZkEvent instead.
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@105 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/ZKComposer/pom.xml
+++ b/ZKComposer/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>ZKComposer</artifactId>
-    <version>1.2</version>
+    <version>1.2-SNAPSHOT</version>
     <name>ZK Composer</name>
     <description>DLComposer and support packages - MVC composer for ZK.</description>
 
