- increased version to 1.1-SNAPSHOT - added listenOnListbox attribute do DLButton. It allows to direct component enabling disabling according to the listbox.
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@113 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/ZKComponents/pom.xml
+++ b/ZKComponents/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>ZKComponents</artifactId>
-    <version>1.1</version>
+    <version>1.1-SNAPSHOT</version>
     <name>ZKComponents</name>
     <description>Other imporvements of basic ZK components - please check the documentation for each overriden component.</description>
 
