Added ZKComposer dependency
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@117 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/ZKLiferay/pom.xml
+++ b/ZKLiferay/pom.xml
@@ -34,6 +34,13 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>cz.datalite.zk-dl</groupId>
+            <artifactId>ZKComposer</artifactId>
+            <version>1.1</version>
+            <optional>true</optional>
+        </dependency>
+
 
         <dependency>
             <groupId>com.liferay.portal</groupId>
