--- a/pom.xml
+++ b/pom.xml
@@ -173,13 +173,13 @@ SpringService? - service layer with spring - generic service which speaks to gen
         <repository>
             <id>DataLite</id>
             <name>DataLite-releases</name>
-            <url>http://panda:8081/artifactory/libs-releases-local</url>
+            <url>http://zealot:8081/artifactory/libs-releases-local</url>
         </repository>
 
         <snapshotRepository>
             <id>DataLite</id>
             <name>DataLite-snapshots</name>
-            <url>http://panda:8081/artifactory/libs-snapshots-local</url>
+            <url>http://zealot:8081/artifactory/libs-snapshots-local</url>
         </snapshotRepository>
     </distributionManagement>
 
