--- a/ZKLiferay/pom.xml
+++ b/ZKLiferay/pom.xml
@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cz.datalite.zk-dl</groupId>
         <artifactId>zk-dl</artifactId>        
-        <version>1.1</version>
+        <version>1.3.0</version>
     </parent>
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>ZKLiferay</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.3.0</version>
     <name>ZKLiferay</name>
 
     <dependencies>
         <dependency>
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>ZKDLComponents</artifactId>
-            <version>1.1</version>
+            <version>1.3.0</version>
             <optional>true</optional>
         </dependency>
 
         <dependency>
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>HibernateDAO</artifactId>
-            <version>1.1</version>
+            <version>1.3.0</version>
             <optional>true</optional>
         </dependency>
 
         <dependency>
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>SpringService</artifactId>
-            <version>1.1</version>
+            <version>1.3.0</version>
             <optional>true</optional>
         </dependency>
 
         <dependency>
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>ZKComposer</artifactId>
-            <version>1.1</version>
+            <version>1.3.0</version>
             <optional>true</optional>
         </dependency>
 
