--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>zk-dl</artifactId>
-    <version>1.1</version>
+    <version>1.3.0</version>
     <packaging>pom</packaging>
     <name>DataLite ZKoss framework extension library</name>
     <description>
@@ -42,7 +42,7 @@ SpringService? - service layer with spring - generic service which speaks to gen
      <!-- Shared version number properties -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <org.zkframework.version>5.0.6</org.zkframework.version>
+        <org.zkframework.version>5.0.10</org.zkframework.version>
         <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
         <org.hibernateframework.version>3.5.0-Final</org.hibernateframework.version>
     </properties>
@@ -56,6 +56,7 @@ SpringService? - service layer with spring - generic service which speaks to gen
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
+                        <version>2.1.2</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -69,6 +70,7 @@ SpringService? - service layer with spring - generic service which speaks to gen
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.8.1</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -90,6 +92,7 @@ SpringService? - service layer with spring - generic service which speaks to gen
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
@@ -99,8 +102,18 @@ SpringService? - service layer with spring - generic service which speaks to gen
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>2.5</version>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.2.2</version>
+                <configuration>
+                    <tagBase>https://svn.apache.org/repos/asf/maven/components/releases</tagBase>
                 </configuration>
             </plugin>
         </plugins>
