--- a/ZKLiferay/pom.xml
+++ b/ZKLiferay/pom.xml
@@ -111,6 +111,14 @@
                     <artifactId>log4j</artifactId>
                     <groupId>log4j</groupId>
                 </exclusion>
+                <exclusion>
+                    <groupId>xdoclet</groupId>
+                    <artifactId>xdoclet</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
@@ -128,9 +136,16 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <properties>
-        <liferay.version>6.0.6</liferay.version>
+        <liferay.version>6.1.0</liferay.version>
     </properties>
 </project>
