--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -57,3 +57,8 @@ listbox.exportManager.sheetName=Sheet name
 listbox.exportManager.fileName=File name
 
 listbox.paging.noData=No data available
+
+listbox.manager.reset.message.title=Reset all
+listbox.manager.reset.message.text=Please confirm reset of all settings.
+listbox.manager.resetFilter.message.title=Reset filters
+listbox.manager.resetFilter.message.text=Please confirm reset of all filters.
