--- a/ZKDLDemo/pom.xml
+++ b/ZKDLDemo/pom.xml
@@ -14,7 +14,7 @@
         <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
         <org.springframework.security.version>3.0.3.RELEASE</org.springframework.security.version>
         <org.zkoss.zk.version>5.0.6</org.zkoss.zk.version>
-        <cz.datalite.zk-dl.version>1.1</cz.datalite.zk-dl.version>
+        <cz.datalite.zk-dl.version>1.3.0</cz.datalite.zk-dl.version>
         <org.junit.version>4.8.1</org.junit.version>
         <netbeans.hint.deploy.server>liferay</netbeans.hint.deploy.server>
     </properties>
@@ -90,6 +90,12 @@
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>ZKComposer</artifactId>
             <version>${cz.datalite.zk-dl.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cz.datalite.zk-dl</groupId>
+            <artifactId>ZKDLComponents</artifactId>
+            <version>1.3.1</version>
         </dependency>
 
         <dependency>
@@ -199,13 +205,13 @@
 
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.1-alpha-2</version>
+                <version>2.1.1</version>
             </plugin>
 
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>maven-jetty-plugin</artifactId>
-                <version>6.1.9</version>
+                <version>6.1.26</version>
                 <configuration>
                     <connectors>
                         <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
