--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>zk-dl</artifactId>
-    <version>1.3.0</version>
+    <version>1.3.1</version>
     <packaging>pom</packaging>
     <name>DataLite ZKoss framework extension library</name>
     <description>
@@ -121,32 +121,14 @@ SpringService? - service layer with spring - generic service which speaks to gen
     </build>
 
     <dependencies>
+    
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.15</version>
-            <type>jar</type>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.mail</groupId>
-                    <artifactId>mail</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.jms</groupId>
-                    <artifactId>jms</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.sun.jdmk</groupId>
-                    <artifactId>jmxtools</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.sun.jmx</groupId>
-                    <artifactId>jmxri</artifactId>
-                </exclusion>
-            </exclusions>
-
-        </dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.6</version>
+            <type>jar</type>            
+        </dependency>                
+        
     </dependencies>
 
     <modules>
@@ -180,6 +162,16 @@ SpringService? - service layer with spring - generic service which speaks to gen
             <name>ZK Repository</name>
             <url>http://mavensync.zkoss.org/maven2</url>
         </repository>
+        
+        <repository>
+           <snapshots>
+               <enabled>false</enabled>
+           </snapshots>
+           <id>central</id>
+           <name>Central Maven Repository</name>
+           <url>http://repo2.maven.org/maven2</url>
+       </repository>  
+        
     </repositories>
 
     <distributionManagement>
