--- a/ZKDLComponents/pom.xml
+++ b/ZKDLComponents/pom.xml
@@ -40,7 +40,13 @@
             <artifactId>DLHelpers</artifactId>
             <version>1.3.0</version>
         </dependency>
-
+        
+        <dependency>
+            <groupId>cz.datalite.zk-dl</groupId>
+            <artifactId>ZKComponents</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
