ZK-152 ZK-DL convert to SLF4J logging framework
 - all logging events converted to use SLF4J instead of other frameworks
 - excluded other frameworks from POM dependencies to SLF4J be the only used framework

--- a/Selenium/pom.xml
+++ b/Selenium/pom.xml
@@ -30,6 +30,11 @@
                     <groupId>org.testng</groupId>
                     <artifactId>testng</artifactId>
                 </exclusion>
+                 <!-- exclude apache logging, zk-dl uses SLF4J -->
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
