ZK-152 Add ZKLogbackAppender
 - added appender for ZKMonitor based on Logback framework

--- a/ZKStatistics/pom.xml
+++ b/ZKStatistics/pom.xml
@@ -44,6 +44,13 @@
             <optional>true</optional>
         </dependency>
         
+         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.6</version>
+            <optional>true</optional>
+        </dependency>
+        
     </dependencies>
 	
 </project>
