ZK-153 Update to 1.4.0-SNAPSHOT, Netbeans,development support
 - all POM files updated to version 1.4.0-SNAPSHOT
 - defined property cz.datalite.zk-dl.version with current version of library to  keep all modules in same version based on parent pom
 - defined build profile 'development' with jrebel plugin to automatically generate rebel.xml for hot redeploys
 - updated POM files to simplify dependency version set by a property
 - added NetBeans profile 'development' mapped on 'development' maven profile
 - all modules now are built on save using NetBeans
 - migrated POM from Google Code to GitHub
 - added dependency of ZKStatistics on Log4j

--- a/ZKComponents/pom.xml
+++ b/ZKComponents/pom.xml
@@ -1,14 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>zk-dl</artifactId>
         <groupId>cz.datalite.zk-dl</groupId>
-        <version>1.3.0</version>
+        <version>1.4.0-SNAPSHOT</version>
     </parent>
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>ZKComponents</artifactId>
-    <version>1.3.1</version>
+    <version>1.4.0-SNAPSHOT</version>
     <name>ZKComponents</name>
     <description>Other imporvements of basic ZK components - please check the documentation for each overriden component.</description>
 
@@ -28,7 +29,7 @@
         <dependency>
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>DLHelpers</artifactId>
-            <version>1.3.0</version>
+            <version>${cz.datalite.zk-dl.version}</version>
         </dependency>
     </dependencies>
 </project>
