--- a/ZKStatistics/pom.xml
+++ b/ZKStatistics/pom.xml
@@ -1,14 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>zk-dl</artifactId>
         <groupId>cz.datalite.zk-dl</groupId>
-        <version>1.1</version>
+        <version>1.4.0-SNAPSHOT</version>
     </parent>
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>ZKStatistics</artifactId>
-    <version>1.1</version>
+    <version>1.4.0-SNAPSHOT</version>
     <name>ZKStatistics</name>
     <description>Detail monitoring of your session (Timing, Events, SQL Query, Service methods).</description>
   
@@ -35,6 +36,14 @@
             <artifactId>aopalliance</artifactId>
             <version>1.0</version>
         </dependency>
+        
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+            <optional>true</optional>
+        </dependency>
+        
     </dependencies>
 	
 </project>
