ZK-167 DLBind module
 - addopted DLBind module with ZK6 binding 2.0 implementation with dependence on DATALITE version of ZKBind
 - addopted new Binder version
 - addopted new ZKBinderHelper utils working with binding 2.0

--- a/ZKComposer/pom.xml
+++ b/ZKComposer/pom.xml
@@ -34,9 +34,9 @@
         </dependency>
         
         <dependency>
-            <groupId>org.zkoss.zk</groupId>
-            <artifactId>zkplus</artifactId>
-            <version>${org.zkframework.version}</version>
+            <groupId>cz.datalite.zk-dl</groupId>
+            <artifactId>DLBind</artifactId>
+            <version>${cz.datalite.zk-dl.version}</version>
         </dependency>
 
         <dependency>
