ZK-174 Export to MS Excel is blocking
 - for huge data models the export can last couple seconds
 - since now the operation uses EchoEvent and blocks UI until it finishes

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -55,6 +55,7 @@ listbox.exportManager.displayed=Displayed columns
 listbox.exportManager.recordCount=Number of rows to be export (0 = all, max. 36000)
 listbox.exportManager.sheetName=Sheet name
 listbox.exportManager.fileName=File name
+listbox.exportManager.wait=Please wait ...
 
 listbox.paging.noData=No data available
 
