--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>zk-dl</artifactId>
-    <version>1.4.0-SNAPSHOT</version>
+    <version>1.4.0</version>
     <packaging>pom</packaging>
     <name>DataLite ZKoss framework extension library</name>
     <description>
@@ -46,7 +46,7 @@
         <org.zkframework.version>6.5.0</org.zkframework.version>
         <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
         <org.hibernateframework.version>3.5.0-Final</org.hibernateframework.version>
-        <cz.datalite.zk-dl.version>1.4.0-SNAPSHOT</cz.datalite.zk-dl.version>
+        <cz.datalite.zk-dl.version>1.4.0</cz.datalite.zk-dl.version>
         <org.slf4j.version>1.6.6</org.slf4j.version>
     </properties>
 
